@@ -1,7 +1,6 @@
 package com.cloudbees.hudson.plugins.folder.config;
 
 import com.cloudbees.hudson.plugins.folder.health.FolderHealthMetric;
-import com.cloudbees.hudson.plugins.folder.health.FolderHealthMetricDescriptor;
 import com.cloudbees.hudson.plugins.folder.health.WorstChildHealthMetric;
 import org.htmlunit.html.HtmlElement;
 import org.htmlunit.html.HtmlForm;
@@ -9,46 +8,50 @@ import hudson.ExtensionFinder;
 import hudson.init.InitMilestone;
 import hudson.init.Initializer;
 import jenkins.model.Jenkins;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
-import org.jvnet.hudson.test.LoggerRule;
+import org.jvnet.hudson.test.LogRecorder;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.logging.Level;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.emptyIterable;
 import static org.hamcrest.Matchers.hasSize;
 
-public class AbstractFolderConfigurationTest {
+@WithJenkins
+class AbstractFolderConfigurationTest {
 
     private static final String GUICE_INITIALIZATION_MESSAGE =
             "Failed to instantiate Key[type=" + AbstractFolderConfiguration.class.getName() + ", annotation=[none]];";
-    
-    @Rule
-    public JenkinsRule r = new JenkinsRule();
 
-    @Rule
-    public LoggerRule logging = new LoggerRule().record(ExtensionFinder.GuiceFinder.class, Level.INFO).capture(100);
+    private final LogRecorder logging = new LogRecorder().record(ExtensionFinder.GuiceFinder.class, Level.INFO).capture(100);
+
+    private JenkinsRule r;
+
+    @BeforeEach
+    void beforeEach(JenkinsRule rule) {
+        r = rule;
+    }
 
     @Test
     @Issue("JENKINS-60393")
-    public void testInitialization() {
+    void testInitialization() {
         assertThat("AbstractFolderConfiguration should not cause circular dependency on startup",
                 logging.getRecords().stream()
                         .filter(lr -> lr.getLevel().intValue() == Level.WARNING.intValue())
                         .filter(lr -> lr.getMessage().contains(GUICE_INITIALIZATION_MESSAGE))
                         .map(lr -> lr.getSourceClassName() + "." + lr.getSourceMethodName() + ": " + lr.getMessage())
-                        .collect(Collectors.toList()),
+                        .toList(),
                 emptyIterable());
     }
 
     @Test
-    public void healthMetricsAppearsInConfiguredGlobally() throws Exception {
+    void healthMetricsAppearsInConfiguredGlobally() throws Exception {
         HtmlForm cfg = r.createWebClient().goTo("configure").getFormByName("config");
         assertThat("adding metrics from Global Configuration",
                 AbstractFolderConfiguration.get().getHealthMetrics(), hasSize(cfg.getElementsByAttribute("div", "suffix", "healthMetrics").size()));
@@ -56,7 +59,7 @@ public class AbstractFolderConfigurationTest {
 
     @Issue("JENKINS-60393")
     @Test
-    public void shouldBeAbleToRemoveHealthMetricConfiguredGlobally() throws Exception {
+    void shouldBeAbleToRemoveHealthMetricConfiguredGlobally() throws Exception {
         List<FolderHealthMetric> healthMetrics = new ArrayList<>(1);
         healthMetrics.add(new WorstChildHealthMetric(true));
         AbstractFolderConfiguration.get().setHealthMetrics(healthMetrics);
@@ -71,9 +74,10 @@ public class AbstractFolderConfigurationTest {
     }
 
     /**
-     * A initializer that can produce circular dependency if AbstractFolderConfiguration is not properly initialized 
+     * An initializer that can produce circular dependency if AbstractFolderConfiguration is not properly initialized
      * on startup.
      */
+    @SuppressWarnings("unused")
     public static class TestInitialization {
 
         @Initializer(before = InitMilestone.JOB_LOADED, after = InitMilestone.PLUGINS_STARTED)
